# sadhana

./: .env  .env.template  .gitignore  .prettierrc  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  diesel.toml  env.template  fix.patch  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  build_dockerhub.yml  build_locally.yml  build_static_site.yml  fetch_code_server.yml  promote_preview.yml  run_latest.yml  test.yml
common/: Cargo.toml
common/src/: error.rs  lib.rs
db/: Cargo.toml
db/migrations/2022-05-27-131855_create_users/: up.sql
db/src/: lib.rs  schema.rs
db/src/models/: mod.rs  user.rs
docs/operations/: cookie-preview-release.md
docs/superpowers/plans/: 2026-07-15-lander-redesign.md
docs/superpowers/specs/: 2026-04-23-cookie-preview-release-design.md  2026-07-15-lander-redesign-design.md
errors/: Cargo.toml
errors/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  idb.js  index.html  jsconfig.json  robots.txt  service_worker.js  site.webmanifest  sitemap.xml  styles.scss  tailwind.config.js
frontend/i18n/: en.json  ru.json  ua.json
frontend/icons/: demo.html  selection.json  style.css
frontend/icons/fonts/: icomoon.eot
frontend/snapshots/: en.html  ru.html  uk.html
frontend/src/: css.rs  error.rs  i18n.rs  main.rs  model.rs  web_sys_ext.rs
frontend/src/components/: blank_page.rs  calendar.rs  chart.rs  clipboard_copy_button.rs  draggable_list.rs  grid.rs  list_errors.rs  mod.rs  month_calendar.rs  prompt.rs  pwd.rs  share_link.rs  summary_details.rs  use_context_provider.rs  user_context_provider.rs
frontend/src/hooks/: app_update_ctx.rs  mod.rs  network_status_ctx.rs  session_state_context.rs  use_cache_aware_async.rs  use_user_context.rs  use_visibility.rs
frontend/src/model/: auth.rs  mod.rs  value.rs  yatra.rs
frontend/src/pages/: register.rs
frontend/src/routes/: about.rs  charts.rs  confirmation.rs  edit_password.rs  edit_user.rs  edit_user_practice.rs  help.rs  home.rs  login.rs  mod.rs  new_practice.rs  new_user_practice.rs  pwd_reset.rs  register.rs  register_with_id.rs  settings.rs  user_practices.rs  user_shares.rs  yatras.rs
frontend/src/routes/charts/: base.rs  charts.rs  create_report.rs  graph_editor.rs  grid_editor.rs  mod.rs  private_charts.rs  shared_charts.rs
frontend/src/routes/practices/: daily_score_conf.rs  edit_user_practice.rs  edit_yatra_practice.rs  mod.rs  new_practice.rs
frontend/src/routes/settings/: about.rs  edit_password.rs  edit_user.rs  help.rs  import.rs  language.rs  mod.rs  support_form.rs
frontend/src/routes/yatras/: admin_settings.rs  join.rs  mod.rs  settings.rs
frontend/src/services/: mod.rs  report.rs  requests.rs  url.rs
frontend/src/utils/: mod.rs  release_channel.rs  service_worker.rs  time_dur_input_support.rs
frontend/static/: en.html  en_ua.html  ru.html  uk.html
frontend/styles/: app.css  tailwind.css
migrations/2022-05-27-131855_create_users/: up.sql
migrations/2022-09-02-154526_create_diary/: down.sql  up.sql
migrations/2022-09-02-154526_create_journal/: down.sql  up.sql
migrations/2023-01-04-145809_confirmations/: down.sql  up.sql
migrations/2023-02-13-140000_practices_is_active_not_null/: down.sql  up.sql
migrations/2023-02-16-152430_duration/: up.sql
migrations/2023-02-27-191709_practice_order/: down.sql  up.sql
migrations/2023-05-30-130757_sharing_link/: down.sql  up.sql
migrations/2023-05-31-130310_default_practice_order/: down.sql  up.sql
migrations/2023-07-20-125947_yatras/: down.sql  up.sql
migrations/2023-08-11-152312_required_practices/: down.sql  up.sql
migrations/2023-11-05-183230_reports/: down.sql  up.sql
migrations/2024-05-21-105920_default_practices_i18n/: down.sql  up.sql
migrations/2025-10-27-153709-0000_dropdown_practices/: down.sql  up.sql
migrations/2025-12-30-174549-0000_yatra_colour_zones/: down.sql  up.sql
migrations/2026-01-02-124157-0000_yatra_stats/: down.sql  up.sql
migrations/2026-01-13-135115-0000_yatra_daily_score/: down.sql  up.sql
scripts/: build_info.sh
server/: Cargo.toml
server/src/: constants.rs  db_types.rs  error.rs  main.rs  routes.rs  schema.rs  test_helpers.rs  tests.rs  validation.rs  vars.rs
server/src/app/: mod.rs  shared.rs  support.rs  user_practices.rs  yatras.rs
server/src/app/diary/: api.rs  model.rs  request.rs  response.rs
server/src/app/journal/: api.rs  request.rs
server/src/app/report/: db.rs  mod.rs
server/src/app/shared/: version.rs
server/src/app/user/: api.rs  model.rs  request.rs  response.rs
server/src/app/yatras/: dto.rs  handlers.rs  mod.rs  model.rs  service.rs  stats.rs
server/src/app/yatras/domain/: mod.rs  stats.rs
server/src/middleware/: auth.rs  cors.rs  mod.rs  state.rs
server/src/routes/: mod.rs
server/src/routes/users/: create.rs  get_all.rs  mod.rs
server/src/utils/: date.rs  db.rs  emails.rs  mod.rs  test_helpers.rs  token.rs
server/src/utils/email/: index.html  mod.rs
server/src/utils/email/templates/: email_head.tmpl  register_email_body.tmpl  reset_email_body.tmpl
src/: schema.rs
static/: index.html  sitemap.xml
static-react/: index.html  package-lock.json  package.json  vite.config.ts
static-react/.devcontainer/: Dockerfile  devcontainer.json
static-react/public/locales/en/: translation.json
static-react/public/locales/ru/: translation.json
static-react/public/locales/uk/: translation.json
static-react/src/: App.tsx  i18n.ts  index.css  main.tsx
static-react/src/components/: Carousel.tsx  FeatureRows.tsx  FeaturesGrid.tsx  FloatingCTA.tsx  FloatingHeaderButtons.tsx  Footer.tsx  GlassBox.tsx  Hero.tsx  LandingView.tsx  LanguageSelector.tsx  Navbar.tsx  ParallaxCarouselSection.tsx  ParallaxSection.tsx  PhoneCarousel.tsx  PhoneFrame.tsx  PracticeCategories.tsx  ScreenshotsCarousel.tsx  Section.tsx  StatsStrip.tsx  TrackBanner.tsx  TriplePhones.tsx
static/en/: index.html
static/ru/: index.html
static/uk/: index.html
