[workspace]
resolver = "2" # features for target-specific deps are not enabled if the target is not being built

members = ["server", "frontend", "common"]

default-members = ["server"]

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
# Automatically strip symbols from the binary.
strip = true
