[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
actix-web = { version = "4", optional = true }
diesel = { version = "2.1", features = ["r2d2", "uuid"], optional = true }
bcrypt = { version = "0.15", optional = true }
jsonwebtoken = { version = "9", optional = true }
uuid = { version = "1", optional = true }
validator = { version = "0.18", optional = true }
log = "0.4"
lettre = { version = "0.11", optional = true, default-features = false, features = [
    "smtp-transport",
    "tokio1-rustls-tls",
    "hostname",
    "builder",
] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"

[features]
default = []
frontend = []
backend = [
    "actix-web",
    "diesel",
    "bcrypt",
    "jsonwebtoken",
    "uuid",
    "validator",
    "lettre",
]
