[package]
name = "errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
derive_more = "0.99"
actix-web ="4.0"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "0.8"
