[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", features = ["frontend"]}
yew = "0.20"
yew-hooks = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
yew-router = "0.17"
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"
lazy_static = "1.4"
parking_lot = "0.12"
dotenv_codegen = "0.15"
gloo = "0.8"
gloo-dialogs = "0.1"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen-futures = "0.4"
i18n_codegen = "0.1"
once_cell = "1.17"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]