[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", features = ["frontend"] }
yew = "0.21"
yew-hooks = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
yew-router = "0.18"
console_error_panic_hook = "0.1"
log = { version = "0.4", features = [
  "max_level_debug",
  "release_max_level_warn",
] }
wasm-logger = "0.2"
lazy_static = "1.4"
parking_lot = "0.12"
gloo = { version = "0.11", features = ["file", "futures"] }
gloo-dialogs = "0.2"
gloo-events = "0.2"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
i18n_codegen = "0.1"
once_cell = "1"
regex = "1"
yew-plotly = "0.3"
const_format = "0.2"
Inflector = "0"
js-sys = "0.3"
csv = "1"
futures = "0.3"
urlencoding = "2.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
  "CssStyleDeclaration",
  "DomRect",
  "Document",
  "DomTokenList",
  "Navigator",
  "Blob",
  "Url",
  "VisibilityState",
  "BroadcastChannel",
  "MessageEvent",
]
