[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", features = ["backend"]}
actix-web ="4"
actix-http = "3"
actix-cors ="0.6"
actix-service = "2"
actix-rt = "2"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuidv07", "chrono", "serde_json"] }
validator = { version = "0.16", features = ["derive"] }
bcrypt = { version = "0.13" }
uuid = { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = { version = "8.1" }
thiserror = "1.0"
futures = { version = "0.3" }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
# derive_more = "0.99"